<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/flotte"
        android:title="@string/Flotte">
        <menu>
            <item
                android:id="@+id/vihicule"
                android:title="@string/véhicules"></item>
            <item
                android:id="@+id/assurances"
                android:title="@string/assurances"></item>
            <item
                android:id="@+id/entretiens"
                android:title="@string/mes_entretiens"></item>
        </menu>
    </item>
    <item
        android:id="@+id/recette"
        android:title="@string/Ma_Recette"/>
    <item
        android:id="@+id/charges"
        android:title="@string/Mes_Charges"/>
    <item
        android:id="@+id/calendrier"
        android:title="@string/Calendrier"/>
    <item
        android:id="@+id/clients"
        android:title="@string/Mes_Clients"/>
    <item
        android:id="@+id/locations"
        android:title="@string/Mes_Locations"/>
    <item
        android:id="@+id/logout"
        android:title="@string/Se_déconnecter"
        android:icon="@drawable/ic_baseline_login_24"
        app:showAsAction="always">
    </item>

</menu>