<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ajoute_vidange">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_input_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/Edit_matricule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/Matricule" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_input_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/Edit_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:gravity="center"
                android:hint="@string/Date_vidange"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_input_layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/Edit_kilomaitrage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:gravity="center"
                android:hint="@string/Kilomètrage"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginTop="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/Filter"/>

        </LinearLayout>
        <CheckBox
            android:id="@+id/filter1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Filtre_à_air"
            android:layout_marginLeft="120dp"/>
        <CheckBox
            android:id="@+id/filter2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Filtre_à_huile"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="8dp"/>
        <CheckBox
            android:id="@+id/filter3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Filtre_à_carburant"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kilométrage"/>

            <Spinner
                android:id="@+id/spinner_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/KM"/>

        </LinearLayout>

<Button
    android:onClick="Ajoute"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Ajoute"
    android:layout_gravity="center"
    android:layout_marginTop="30dp">

</Button>
    </LinearLayout>

</ScrollView>