<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ajoute_vihicule">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
<EditText
        android:id="@+id/vihicule_Nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="25dp"
        android:hint="@string/Nom_voiture"
        android:layout_centerInParent="true"
        />

 <EditText
     android:id="@+id/vihicule_Imatricule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="16dp"
        android:hint="@string/Immatriculation"

        android:layout_centerInParent="true"
        />

        <EditText
            android:id="@+id/vihicule_Date_Circulation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="45dp"
            android:hint="@string/Date_de_mise"
            android:inputType="date" />

        <Spinner
            android:id="@+id/vihicule_marque"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="16dp"
            android:hint="@string/marque_com"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true"
            />

        <EditText
            android:id="@+id/vihicule_Valeur_entrer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="40dp"

            android:hint="@string/Valeur_entrée"
            android:inputType="number" />

        <EditText
            android:id="@+id/vihicule_Date_effet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="40dp"
            android:hint="@string/Date_effet"
            android:inputType="date" />

        <EditText
            android:id="@+id/vihicule_Date_echeance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="40dp"
            android:hint="@string/Date_echeance"
            android:inputType="date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="40dp"
            android:gravity="center_horizontal"
            android:text="@string/choix"
            android:textSize="20dp">

        </TextView>

        <com.divyanshu.colorseekbar.ColorSeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true"
            android:background="@android:color/white"
            android:id="@+id/vihicule_Couleur">

        </com.divyanshu.colorseekbar.ColorSeekBar>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="120dp"
            android:layout_marginTop="46dp"
            android:text="@string/confirmer"
            android:onClick="Confirmer_lajoute"
            android:textColor="@color/NAVwhite_theme10"
            android:background="@drawable/rounded_buttom"
            />



    </LinearLayout>

</ScrollView>